try to fix flash on iOS again

--- a/frontend/src/components/Background/Background.css
+++ b/frontend/src/components/Background/Background.css
@@ -9,6 +9,6 @@ video {
   z-index: -100;
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
-  background: transparent;
+  border-bottom: 1px solid transparent;
   transition: 1s opacity;
 }
